--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.31",
     "gatsby-image": "^2.0.33",
+    "gatsby-plugin-catch-links": "^2.0.13",
     "gatsby-plugin-feed": "^2.0.15",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-manifest": "^2.0.24",
