--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.9",
     "gatsby-remark-copy-linked-files": "^2.0.10",
+    "gatsby-remark-embed-gist": "^1.1.7",
     "gatsby-remark-images": "^2.0.6",
     "gatsby-remark-prismjs": "^3.2.5",
     "gatsby-remark-responsive-iframe": "^2.0.10",
