--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "boredhacking",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "A personal blog for James Russo",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
+  "author": "James Russo",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
     "disqus-react": "^1.0.5",
-    "gatsby": "^2.1.31",
+    "gatsby": "^2.5.3",
     "gatsby-image": "^2.0.33",
     "gatsby-plugin-catch-links": "^2.0.13",
     "gatsby-plugin-feed": "^2.0.15",
