get deploy working again

--- a/.gitignore
+++ b/.gitignore
@@ -63,8 +63,12 @@ public
 *.icloud
 
 # Yarn
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 yarn-error.log
-.pnp/
-.pnp.js
 # Yarn Integrity file
 .yarn-integrity
