--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             - ~/anakin
   build_and_deploy:
     docker:
-      - image: circleci/node:10.15.3
+      - image: circleci/node:15.5.0
     working_directory: ~/anakin
     steps:
       - restore_cache:
@@ -49,7 +49,10 @@ jobs:
       - run:
           name: Deploy
           command: |
-            yarn global add gatsby-cli && yarn add gatsby-plugin-s3 && yarn run build && yarn run deploy
+            yarn set version 2.4.0
+            yarn global add gatsby-cli
+            yarn add gatsby-plugin-s3
+            yarn run build && yarn run deploy
 workflows:
   version: 2.1
   build:
