--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,15 @@ jobs:
           key: v1-repo-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}-public
           paths:
             - ./public
+       - save_cache:
+          name: Save Yarn Package Cache
+          key: yarn-packages-v1-{{ .Branch }}-{{ checksum "yarn.lock" }}
+          paths:
+            - ./.yarn/cache
+      - save_cache:
+          key: v1-repo-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/anakin
   deploy:
     docker:
       - image: circleci/node:15.5.0
