--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   dependencies:
     docker:
-      - image: circleci/node:15.5.0
+      - image: cimg/node:16.13.2
     working_directory: ~/anakin
     steps:
       - checkout
@@ -32,7 +32,7 @@ jobs:
             - ~/anakin
   build:
     docker:
-      - image: circleci/node:15.5.0
+      - image: cimg/node:16.13.2
     working_directory: ~/anakin
     steps:
       - restore_cache:
@@ -49,7 +49,7 @@ jobs:
             - .
   deploy:
     docker:
-      - image: circleci/node:15.5.0
+      - image: cimg/node:16.13.2
     working_directory: ~/anakin
     steps:
       - attach_workspace:
