--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "dependencies": {
     "@gatsbyjs/reach-router": "^1.3.6",
     "@mikaelkristiansson/domready": "^1.0.11",
-    "@types/node": "^14.14.32",
+    "@types/node": "^17.0.9",
     "@types/styled-components": "^5.1.9",
     "anser": "^2.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-gatsby": "^1.0.0",
     "css.escape": "^1.5.1",
     "disqus-react": "^1.0.11",
-    "event-source-polyfill": "^1.0.24",
+    "event-source-polyfill": "^1.0.25",
     "gatsby": "^3.5.0",
     "gatsby-cli": "^3.12.0",
-    "gatsby-legacy-polyfills": "^1.0.0",
+    "gatsby-legacy-polyfills": "^2.4.0",
     "gatsby-link": "^3.0.1",
     "gatsby-plugin-catch-links": "^3.11.0",
     "gatsby-plugin-feed": "^3.10.0",
@@ -30,7 +30,7 @@
     "gatsby-plugin-s3": "^0.3.8",
     "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-styled-components": "^4.6.0",
-    "gatsby-plugin-typescript": "^3.0.0",
+    "gatsby-plugin-typescript": "^3.14.0",
     "gatsby-plugin-typography": "^3.0.0",
     "gatsby-react-router-scroll": "^4.12.0",
     "gatsby-remark-copy-linked-files": "^4.8.0",
@@ -39,15 +39,15 @@
     "gatsby-remark-prismjs": "^5.8.0",
     "gatsby-remark-responsive-iframe": "^3.0.0",
     "gatsby-remark-smartypants": "^4.3.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-remark": "^4.3.0",
-    "gatsby-transformer-sharp": "^3.4.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-remark": "^4.11.0",
+    "gatsby-transformer-sharp": "^3.14.0",
     "lodash": "^4.17.21",
     "mitt": "^2.1.0",
     "platform": "^1.3.6",
-    "prismjs": "^1.24.1",
+    "prismjs": "^1.26.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.14.1",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -56,7 +56,7 @@
     "react-typography": "^0.16.20",
     "regenerator-runtime": "^0.13.7",
     "shallow-compare": "^1.2.2",
-    "sharp": "^0.28.3",
+    "sharp": "^0.29.3",
     "stack-trace": "^0.0.10",
     "styled-components": "^5.2.1",
     "svg-react-loader": "^0.4.6",
@@ -64,8 +64,7 @@
     "typeface-montserrat": "^1.1.13",
     "typescript": "^4.3.5",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19",
-    "yarn": "^1.22.10"
+    "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
     "gatsby-plugin-root-import": "^2.0.6",
