--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
     docker:
       - image: cimg/node:16.13.2
     working_directory: ~/anakin
+    resource_class: large
     steps:
       - restore_cache:
           key: v1-repo-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
