--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "dependencies": {
     "@types/node": "^18.14.0",
     "@types/styled-components": "^5.1.25",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "babel-plugin-styled-components": "^2.0.2",
     "babel-preset-gatsby": "^3.6.0",
     "disqus-react": "^1.1.2",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "event-source-polyfill": "^1.0.26",
     "gatsby": "^5.6.1",
     "gatsby-cli": "^5.6.0",
@@ -35,6 +40,8 @@
     "gatsby-source-filesystem": "^5.6.0",
     "gatsby-transformer-remark": "^6.6.0",
     "gatsby-transformer-sharp": "^5.6.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "mitt": "^3.0.0",
     "platform": "^1.3.6",
     "prismjs": "^1.27.0",
@@ -79,7 +86,12 @@
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
     "deploy": "gatsby-plugin-s3 deploy --yes",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint ./src/ --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --cache-location .eslintcache --fix"
   },
   "packageManager": "yarn@3.3.0"
 }
