--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "version": "0.1.0",
   "author": "James Russo",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "^20.4.2",
-    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
-    "babel-plugin-styled-components": "^2.1.4",
     "babel-preset-gatsby": "^3.11.0",
     "disqus-react": "^1.1.2",
     "eslint": "^8.45.0",
@@ -20,6 +20,7 @@
     "gatsby-cli": "^5.11.0",
     "gatsby-link": "^5.11.0",
     "gatsby-plugin-catch-links": "^5.11.0",
+    "gatsby-plugin-emotion": "^8.11.0",
     "gatsby-plugin-feed": "^5.11.0",
     "gatsby-plugin-google-gtag": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
@@ -28,7 +29,6 @@
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-s3": "^0.4.1",
     "gatsby-plugin-sharp": "^5.11.0",
-    "gatsby-plugin-styled-components": "^6.11.0",
     "gatsby-plugin-typescript": "^5.11.0",
     "gatsby-plugin-typography": "^5.11.0",
     "gatsby-react-router-scroll": "^6.11.0",
@@ -56,7 +56,6 @@
     "shallow-compare": "^1.2.2",
     "sharp": "^0.32.3",
     "stack-trace": "^0.0.10",
-    "styled-components": "^6.0.4",
     "svg-react-loader": "^0.4.6",
     "typeface-merriweather": "^1.1.13",
     "typeface-montserrat": "^1.1.13",
