--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,10 +96,14 @@ workflows:
       - format:
           requires:
             - dependencies
+      - type-check:
+          requires:
+            - dependencies
       - deploy:
           requires:
             - build
             - format
+            - type-check
           filters:
             branches:
               only:
