--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-react-svg": "^3.3.0",
     "gatsby-plugin-s3": "^0.4.1",
     "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-plugin-slug": "^2.0.0",
     "gatsby-plugin-typescript": "^5.11.0",
     "gatsby-plugin-typography": "^5.11.0",
     "gatsby-react-router-scroll": "^6.11.0",
@@ -79,7 +80,6 @@
     "gatsby"
   ],
   "license": "MIT",
-  "main": "n/a",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
